// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image loadingAspectRatio renders with MQ aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  border-radius: 0;
  background-color: #F1F1F1;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    padding-top: 300%;
    height: 0;
    width: 100%;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    padding-top: 100%;
    height: 0;
    width: 100%;
  }
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 479px) {
  .emotion-2 {
    height: auto;
    width: 100%;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    height: auto;
    width: 100%;
  }
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with MQ aspect ratio,  width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  border-radius: 0;
  background-color: #F1F1F1;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 100px;
    height: 60px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 300px;
    height: 180px;
  }
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 479px) {
  .emotion-2 {
    height: 60px;
    width: 100px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    height: 180px;
    width: 300px;
  }
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with MQ width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  border-radius: 0;
  background-color: #F1F1F1;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    width: 100px;
    height: 100px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: 300px;
    height: 200px;
  }
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

@media screen and (max-width: 479px) {
  .emotion-2 {
    height: 100px;
    width: 100px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    height: 200px;
    width: 300px;
  }
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with height dimensions and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 100px;
  height: 300px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with height dimensions in px and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 100px;
  height: 300px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with logical margin props 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
  margin-inline: 25px;
  margin-block: 50px;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with no dimensions and 1:1 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 100%;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with no dimensions and invalid aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with no dimensions or aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with number dimensions or aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 100px;
  height: 100px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 100px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with string dimensions or aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: auto;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: auto;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with width dimensions and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 100px;
  height: 300px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image loadingAspectRatio renders with width dimensions in px and 1:3 aspect ratio 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 100px;
  height: 300px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 300px;
  width: 100px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image render with incorect path 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      class="emotion-2"
      src="incorrect-path"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image render with multiple sources 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: auto;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <source
      media="screen and (min-width: 1024px)"
      srcset="image-lg.jpg"
    />
    <source
      media="screen and (min-width: 768px) and (max-width: 1023px)"
      srcset="image-md.jpg"
    />
    <source
      media="(min-width: 600px)"
      srcset="image-600.jpg"
    />
    <img
      class="emotion-2"
      src="image.jpg"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image renders with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image renders with defaults after load 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: auto;
  width: 3px;
  border-radius: 0;
}

.emotion-1 {
  opacity: 1;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
}

<picture
    class="emotion-0"
  >
    <img
      alt="Example Image"
      class="emotion-1"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image renders with max height and width 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  max-width: 500px;
  max-height: 500px;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image renders with object-fit and object-position 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  object-fit: cover;
  object-position: 50% 50%;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image renders with placeholder icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
          />
        </svg>
      </div>
    </div>
    <img
      alt="Example Image"
      class="emotion-5"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image renders with placeholder icon override 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-3 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-3.emotion-3 {
  width: 48px;
  height: 48px;
}

.emotion-5 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="emotion-3 emotion-4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
      </div>
    </div>
    <img
      alt="Example Image"
      class="emotion-5"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image stylePreset renders with invalidPreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image stylePreset renders with maskRound 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image stylePreset renders with maskSemiRounded 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image stylePreset with loading=lazy 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: auto;
  width: 3px;
  border-radius: 0;
}

.emotion-1 {
  opacity: 1;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
}

<picture
    class="emotion-0"
  >
    <img
      alt="Example Image"
      class="emotion-1"
      loading="lazy"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image stylePreset with mq 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 3px;
  height: 3px;
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-0 {
    border-radius: 12px;
    background-color: #F1F1F1;
  }

  .emotion-0 svg {
    fill: #ABABAB;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    border-radius: 24px;
    background-color: #F1F1F1;
  }

  .emotion-0 svg {
    fill: #ABABAB;
  }
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image stylePreset with renderOnServer & loading=lazy 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: auto;
  width: 3px;
  border-radius: 0;
}

.emotion-1 {
  opacity: 1;
  display: block;
  border-radius: inherit;
  height: 3px;
  width: 3px;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
}

<picture
    class="emotion-0"
  >
    <img
      alt="Example Image"
      class="emotion-1"
      loading="lazy"
      src="/placeholder-3x2.png"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image width & height as props overrides should take priority when render with width & height as props & overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  width: 250px;
  height: 500px;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  height: 500px;
  width: 250px;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      height="200px"
      src="/placeholder-3x2.png"
      width="300px"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image width & height as props renders with default dimensions 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      height="200px"
      src="/placeholder-3x2.png"
      width="300px"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image width & height as props renders with number dimensions 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  width: 100%;
  display: block;
  padding-top: 0;
  height: 0;
  width: 100%;
  border-radius: 0;
  background-color: #F1F1F1;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-2 {
  opacity: 0;
  display: block;
  border-radius: inherit;
  top: 0;
  left: 0;
  position: absolute;
}

<picture
    class="emotion-0"
  >
    <div
      class="emotion-1"
    />
    <img
      alt="Example Image"
      class="emotion-2"
      height="200"
      src="/placeholder-3x2.png"
      width="300"
    />
  </picture>
</DocumentFragment>
`;
